Make the 'corridor plotter' feature functional.
